CREATE SCHEMA IF NOT EXISTS winslow;
SET search_path TO winslow;
ALTER DATABASE winslow SET TIMEZONE = 'Europe/Zurich';

-- In most database designs the majority of columns should be marked not null.

/*
Plant-UML-Diagram: https://img.plantuml.biz/plantuml/dsvg/bPDDRi8m48NtEOMLPQLSe2ieHIgBTW6esyZ40xNadye_2qIuUqUfZR5ifMM3z9vVlZ4puuLrr3WlHGFASNSch_2DXaH5BWqXJuJTZ9upyams7tlqkmv_59M0pkToktfRRfjh4o4RPPtnWzCcGFZD-0j2gWKJUgMziH2mmoGA90R58ymT38vh5Q3sLnNKifW52TQ1oKgTWPfROX3KMgErh9PrdgK-MrGFDNcjZ1P2pX5c_it9K5Rdxi8NnH0hgFfa4slF9Uo4ZZTqA7kBkhWEe-UiYzDQzfW7jFURzpLwe5Zcb5UEvMOkNBj30hruBXXNfm0u1Fd_eQpYmEE6HbqWQkmfgBmyWCdfTwzo7BjEN-wU62RRBshRCXGV2mRqyGW6Cy49vt7nCJ1evIXN68bcdkdpWcsJz7oo0AQz3SVX6TIEYw_BKK-XgEPJ4NNLNJUEQLPJ1q4mmbNRn1K8g3oLkhG0nRmKFm00)](https://editor.plantuml.com/uml/bPDDRi8m48NtEOMLPQLSe2ieHIgBTW6esyZ40xNadye_2qIuUqUfZR5ifMM3z9vVlZ4puuLrr3WlHGFASNSch_2DXaH5BWqXJuJTZ9upyams7tlqkmv_59M0pkToktfRRfjh4o4RPPtnWzCcGFZD-0j2gWKJUgMziH2mmoGA90R58ymT38vh5Q3sLnNKifW52TQ1oKgTWPfROX3KMgErh9PrdgK-MrGFDNcjZ1P2pX5c_it9K5Rdxi8NnH0hgFfa4slF9Uo4ZZTqA7kBkhWEe-UiYzDQzfW7jFURzpLwe5Zcb5UEvMOkNBj30hruBXXNfm0u1Fd_eQpYmEE6HbqWQkmfgBmyWCdfTwzo7BjEN-wU62RRBshRCXGV2mRqyGW6Cy49vt7nCJ1evIXN68bcdkdpWcsJz7oo0AQz3SVX6TIEYw_BKK-XgEPJ4NNLNJUEQLPJ1q4mmbNRn1K8g3oLkhG0nRmKFm00)
Entities: building, classroom, department, section, time-slot, course, instructor, student,
Join-Tables:
-- Enrollment: student, section
-- Section_Instructor
-- Section_Timeslot
*/

CREATE TABLE addresses
(
    address_id integer PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    street varchar(255) NOT NULL,
    zipcode varchar(4) NOT NULL,
    city varchar(20) NOT NULL
);

CREATE TABLE schools
(
    school_id integer PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    name varchar(200) UNIQUE NOT NULL,
    address_id integer REFERENCES addresses NOT NULL
);

CREATE TABLE classrooms
(
    room_id integer PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    room_no integer UNIQUE NOT NULL,
    capacity integer NOT NULL CHECK ( capacity > 0 ),
    school_id integer REFERENCES schools NOT NULL
);

CREATE TABLE departments
(
    department_id integer PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    name varchar(50) NOT NULL
);

CREATE TABLE courses
(
    course_id integer PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    title varchar(200) NOT NULL,
    department_id integer REFERENCES departments NOT NULL
);

CREATE TABLE time_slots
(
    time_slot_id integer PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    day varchar(16) NOT NULL CHECK (day IN ('Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday')),
    starts_time time with time zone NOT NULL,
    end_time time with time zone NOT NULL
    CONSTRAINT valid_time_range CHECK (end_time > starts_time)

);

CREATE TABLE sections
(
    section_id integer PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    semester varchar(8) NOT NULL CHECK ( semester IN ('Summer', 'Winter') ),
    year integer NOT NULL CHECK (year >= 2000),
    room_id integer REFERENCES classrooms NOT NULL,
    course_id integer REFERENCES courses NOT NULL
);

CREATE TABLE instructors
(
    instructor_id integer PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    firstname varchar(200) NOT NULL ,
    lastname varchar(200) NOT NULL ,
    email varchar(200) NOT NULL ,
    password varchar(60) NOT NULL ,
    department_id integer REFERENCES departments NOT NULL
);

CREATE TABLE students
(
    student_id integer PRIMARY KEY GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    firstname varchar(200) NOT NULL,
    lastname varchar(200) NOT NULL,
    email varchar(200) NOT NULL UNIQUE,
    password varchar(60) NOT NULL,
    department_id integer REFERENCES departments NOT NULL
);

CREATE TABLE enrollments
(
    section_id integer REFERENCES sections NOT NULL,
    student_id integer REFERENCES students NOT NULL,
    grade integer CHECK (grade >= 1 AND grade <= 6),
    UNIQUE (section_id, student_id)
);

CREATE TABLE section_instructor
(
    section_id integer REFERENCES sections NOT NULL,
    instructor_id integer REFERENCES instructors NOT NULL
);

CREATE TABLE section_timeslot
(
    section_id integer REFERENCES sections NOT NULL,
    time_slot_id integer REFERENCES time_slots NOT NULL
);

GRANT SELECT, INSERT, UPDATE, DELETE ON ALL TABLES IN SCHEMA winslow TO nick;